--- a/_css/patterns.css
+++ b/_css/patterns.css
@@ -544,21 +544,22 @@ select.input,
 	text-shadow: 0 1px 0 #fff;
 	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.1);
 	background-color: #e9e9e9;
-	background: -webkit-linear-gradient(top,#fff 0%,#e9e9e9 100%);
-	background: -moz-linear-gradient(top,#fff 0%,#e9e9e9 100%);
-	background: -o-linear-gradient(top,#fff 0%,#e9e9e9 100%);
-	background: linear-gradient(to bottom,#fff 0%,#e9e9e9 100%)
+	background: -webkit-linear-gradient(top, #fff, #e9e9e9);
+	background: -moz-linear-gradient(top, #fff, #e9e9e9);
+	background: -o-linear-gradient(top, #fff,#e9e9e9);
+	background: linear-gradient(to bottom, #fff,#e9e9e9);
 	margin-right: 0.5em;
 	border: 1px solid #ddd;
 	border-color: rgba(0,0,0,0.15);
 	border-radius: 0.25em;
 	padding: 0.5em 0.75em; /* 8px 12px */
 	display: inline-block;
+	position: relative;
 	}
 	select.input {
-		background-image: url(data:image/svg+xml;charset=utf-8;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iMTUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBvbHlnb24gcG9pbnRzPSI4LDAgMyw2IDEzLDYiIGZpbGw9IiM0NDQiLz48cG9seWdvbiBwb2ludHM9IjgsMCAzLDYgMTMsNiIgZmlsbD0iIzQ0NCIgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMTYsIDE1KSByb3RhdGUoLTE4MCkiLz48L3N2Zz4=);
+		background: #e9e9e9 url(data:image/svg+xml;charset=utf-8;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iMTUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBvbHlnb24gcG9pbnRzPSI4LDAgMyw2IDEzLDYiIGZpbGw9IiM0NDQiLz48cG9seWdvbiBwb2ludHM9IjgsMCAzLDYgMTMsNiIgZmlsbD0iIzQ0NCIgdHJhbnNmb3JtPSJ0cmFuc2xhdGUoMTYsIDE1KSByb3RhdGUoLTE4MCkiLz48L3N2Zz4=);
 		background-repeat: no-repeat;
-		background-position: 97.5% 50%;
+		background-position: 92% 50%;
 		background-size: 1em;
 	}
 	select.input:hover,
@@ -573,6 +574,7 @@ select.input,
 	}
 	select.input:active,
 	[class$="button"]:active {
+		outline: 0 none;
 		box-shadow: inset 0 2px 0 rgba(0,0,0,0.05);
 		background-color: #ddd;
 	}
@@ -583,10 +585,10 @@ select.input,
 	text-shadow: 0 -1px 0 rgba(0,0,0,0.5);
 	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.3);
 	background-color: #34d;
-	background: -webkit-linear-gradient(top,#56f 0%,#34d 100%);
-	background: -moz-linear-gradient(top,#56f 0%,#34d 100%);
-	background: -o-linear-gradient(top,#56f 0%,#34d 100%);
-	background: linear-gradient(to bottom,#56f 0%,#34d 100%);
+	background: -webkit-linear-gradient(top, #56f, #34d);
+	background: -moz-linear-gradient(top, #56f, #34d);
+	background: -o-linear-gradient(top, #56f, #34d);
+	background: linear-gradient(to bottom, #56f, #34d);
 	border: 1px solid #34d;
 	border-color: rgba(0,0,0,0.4);
 	}
@@ -599,10 +601,10 @@ select.input,
 	.primary-button:active {
 		box-shadow: inset 0 2px 0 rgba(0,0,0,0.25);
 		background-color: #12b;
-		background: -webkit-linear-gradient(top,#34d 0%,#12b 100%);
-		background: -moz-linear-gradient(top,#34d 0%,#12b 100%);
-		background: -o-linear-gradient(top,#34d 0%,#12b 100%);
-		background: linear-gradient(to bottom,#34d 0%,#12b 100%)
+		background: -webkit-linear-gradient(top, #34d, #12b);
+		background: -moz-linear-gradient(top, #34d, #12b);
+		background: -o-linear-gradient(top, #34d, #12b);
+		background: linear-gradient(to bottom, #34d, #12b);
 	}
 
 /* Combined inputs/buttons */
