--- a/_css/patterns.css
+++ b/_css/patterns.css
@@ -16,13 +16,13 @@
 /* Centered container with max-width of 800px */
 .container {
 	margin: 0 auto;
-	padding: 1em 4%;
+	padding: 1em 5%;
 	max-width: 50em; /* 800px */
 	overflow: hidden;
 }
 @media screen and (min-width: 30em) {
 	.container {
-		padding: 1em 2%;
+		padding: 1em 2.5%;
 	}
 }
 
@@ -47,6 +47,13 @@
 /* ============================================================
 	Text
 ============================================================ */
+.headline {
+	color: #333;
+	font-weight: 700;
+	font-size: 4em; /* 64px */
+	line-height: 0.875; /* 56px */
+	margin: 0.25em 0 0; /* 16px 0 0 */
+}
 .lede {
 	color: #666;
 	font-weight: 300;
@@ -143,12 +150,15 @@ img.pull-right {
 	margin-left: 1.5em;
 }
 .faq summary {
-	color: #34d;
+	color: #25d;
 	font-weight: 700;
 	display: inline;
 	}
 	.faq summary:hover {
-		color: #12b;
+		color: #52d;
+	}
+	.faq summary:active {
+		color: #d25;
 	}
 	.faq summary::-webkit-details-marker {
 		margin-left: -1em;
@@ -222,10 +232,10 @@ a[rel="tag"] {
 		display: block;
 	}
 	.articles a:hover {
-		background-color: rgba(17,34,187,0.05);
+		background-color: rgba(85,34,221,0.05);
 	}
 	.articles a:active {
-		background-color: rgba(187,17,34,0.05);
+		background-color: rgba(221,34,85,0.05);
 	}
 .articles li {
 	list-style: none;
@@ -359,13 +369,13 @@ dl.metadata dd {
 .progress li.is-active {
 	color: #fff;
 	font-weight: 700;
-	background-color: #34d;
+	background-color: #25d;
 	}
 	.progress li.is-active:before {
-		border-color: #34d transparent;
+		border-color: #25d transparent;
 	}
 	.progress li.is-active:after {
-		border-color: transparent #34d;
+		border-color: transparent #25d;
 	}
 .progress li a {
 	border: 0;
@@ -534,7 +544,7 @@ dl.metadata dd {
 		background-color: #fff;
 		box-shadow: inset 0 1px 0 rgba(17,34,187,0.1);
 		border: 1px solid #12b;
-		border-color: rgba(17,34,187,0.5);
+		border-color: rgba(85,34,221,0.5);
 	}
 
 /* Button/Select */
@@ -542,15 +552,14 @@ select.input,
 [class$="button"] {
 	color: #444;
 	text-shadow: 0 1px 0 #fff;
-	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.1);
+	box-shadow: inset 0 -1px 0 #ccc;
 	background-color: #e9e9e9;
 	background: -webkit-linear-gradient(top, #fff, #e9e9e9);
 	background: -moz-linear-gradient(top, #fff, #e9e9e9);
 	background: -o-linear-gradient(top, #fff,#e9e9e9);
 	background: linear-gradient(to bottom, #fff,#e9e9e9);
 	margin-right: 0.5em;
-	border: 1px solid #ddd;
-	border-color: rgba(0,0,0,0.15);
+	border: 1px solid #ccc;
 	border-radius: 0.25em;
 	padding: 0.5em 0.75em; /* 8px 12px */
 	display: inline-block;
@@ -567,50 +576,49 @@ select.input,
 	[class$="button"]:hover,
 	[class$="button"]:focus {
 		color: #333;
-		box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
+		box-shadow: inset 0 -1px 0 #bbb;
 		background-color: #e9e9e9;
-		border: 1px solid #888;
-		border-color: rgba(0,0,0,0.2);
+		border: 1px solid #bbb;
 	}
 	select.input:active,
 	[class$="button"]:active {
+		color: #333;
 		outline: 0 none;
-		box-shadow: inset 0 2px 0 rgba(0,0,0,0.05);
-		background-color: #ddd;
+		box-shadow: inset 0 1px 0 rgba(0,0,0,0.1);
+		background-color: #bbb;
+		border-color: #bbb;
+		top:1px;
 	}
 
 /* Button > Primary */
 .primary-button {
 	color: #f6f6f6;
-	text-shadow: 0 -1px 0 rgba(0,0,0,0.5);
-	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.3);
+	text-shadow: 0 -1px 0 #02a;
+	box-shadow: inset 0 -1px 0 #02a;
 	background-color: #34d;
-	background: -webkit-linear-gradient(top, #56f, #34d);
-	background: -moz-linear-gradient(top, #56f, #34d);
-	background: -o-linear-gradient(top, #56f, #34d);
-	background: linear-gradient(to bottom, #56f, #34d);
-	border: 1px solid #34d;
-	border-color: rgba(0,0,0,0.2);
+	background: -webkit-linear-gradient(top, #25d, #52d);
+	background: -moz-linear-gradient(top, #25d, #52d);
+	background: -o-linear-gradient(top, #25d, #52d);
+	background: linear-gradient(to bottom, #25d, #52d);
+	border: 1px solid #02a;
 	}
 	.primary-button:hover,
 	.primary-button:focus {
 		color: #fff;
-		box-shadow: inset 0 -1px 0 rgba(0,0,0,0.33);
-		border-color: rgba(0,0,0,0.6);
+		box-shadow: inset 0 -1px 0 #006;
+		border-color: #006;
 	}
 	.primary-button:active {
-		box-shadow: inset 0 2px 0 rgba(0,0,0,0.25);
-		background-color: #12b;
-		background: -webkit-linear-gradient(top, #34d, #12b);
-		background: -moz-linear-gradient(top, #34d, #12b);
-		background: -o-linear-gradient(top, #34d, #12b);
-		background: linear-gradient(to bottom, #34d, #12b);
+		color: #fff;
+		box-shadow: inset 0 1px 0 rgba(0,0,0,0.15);
+		background-color: #006;
 	}
 
 /* Combined inputs/buttons */
 .combined {
 	display: block;
 	overflow: hidden;
+	padding-bottom: 1px;
 	}
 	.combined .input,
 	.combined [class$="button"] {
@@ -679,11 +687,13 @@ label.check + .caption {
 /* Labels */
 label,
 fieldset.options legend {
+	color: #444;
 	margin: 0.375em 0; /* 6px 0 */
 	font-weight: 700;
 	line-height: 1.5; /* 24px */
 	width: auto;
 	display: block;
+   -webkit-font-smoothing: antialiased;
 }
 fieldset.options legend {
 	margin: 0;
