--- a/_css/styles.css
+++ b/_css/styles.css
@@ -18,6 +18,7 @@ header[role="banner"] {
 	background-image: linear-gradient(to bottom, #52d, #25d);
 	box-shadow: inset 0 -2px rgba(0,0,0,0.25), inset 0 2px rgba(0,0,0,0.1);
 	margin: 0;
+	border-bottom: 1px solid #02a;
 	padding-top: 4em; /* 64px */
 	}
 	header[role="banner"] .headline,
