--- a/_css/patterns.css
+++ b/_css/patterns.css
@@ -50,9 +50,15 @@
 .headline {
 	color: #333;
 	font-weight: 700;
-	font-size: 4em; /* 64px */
-	line-height: 1; /* 64px */
-	margin: 0.25em 0 0; /* 16px 0 0 */
+	font-size: 2.5em; /* 40px */
+	line-height: 1; /* 40px */
+	margin: 0.4em 0 0; /* 16px 0 0 */
+}
+@media screen and (min-width: 30em) {
+	.headline {
+		font-size: 4em; /* 64px */
+		margin: 0.25em 0 0; /* 16px 0 0 */
+	}
 }
 .lede {
 	color: #666;
