--- a/_css/patterns.css
+++ b/_css/patterns.css
@@ -18,8 +18,15 @@
 	margin: 0 auto;
 	padding: 1em 5%;
 	max-width: 50em; /* 800px */
-	overflow: hidden;
-}
+	}
+	.container::before,
+	.container::after {
+		content: " ";
+		display: table;
+	}
+	.container::after {
+		clear: both;
+	}
 @media screen and (min-width: 30em) {
 	.container {
 		padding: 1em 2.5%;
@@ -63,8 +70,8 @@
 .lede {
 	color: #666;
 	font-weight: 300;
-	font-size: 1.5em; /* 24px */
-	line-height: 1; /* 24px */
+	font-size: 1.25em; /* 20px */
+	line-height: 1.2; /* 24px */
 	margin: 0.6667em 0 1em; /* 16px 0 24px */
 }
 .caption {
@@ -111,6 +118,21 @@ img.pull-right {
 	margin: 0 0 0.5em 1em; /* 0 0 8px 16px */
 }
 
+/* Grid */
+.grid {
+	margin: 0 -1.5em;
+	overflow: hidden;
+}
+.grid-unit {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 0 1.5em;
+	width: 100%;
+	display: block;
+	float: left;
+}
+
 /* Module */
 [class*="module"] {
 	border: 0;
@@ -133,7 +155,7 @@ img.pull-right {
 	font-weight: 700;
 	font-size: 1.25em; /* 20px */
 	line-height: 1.2; /* 24px */
-	margin-top: 0;
+	/*margin-top: 0;*/
 }
 
 /* Module > Notification */
@@ -311,6 +333,9 @@ dl.metadata dd {
 		display: block;
 	}
 	dl.metadata dd {
+		-moz-box-sizing: content-box;
+		-webkit-box-sizing: content-box;
+		box-sizing: content-box;
 		margin-left: -25%;
 		padding: 0.5em 0 0.5em 25%;
 		width: 75%;
@@ -441,7 +466,7 @@ dl.metadata dd {
 	Navigation
 ============================================================ */
 [class$="nav"] li {
-	margin: 0 0.75em 0 -1em; /* 0 -12px 0 -16px */
+	margin: 0;
 	display: inline;
 }
 [class$="nav"] a {
@@ -698,6 +723,7 @@ label,
 fieldset.options legend {
 	color: #444;
 	margin: 0.375em 0; /* 6px 0 */
+	font-size: 1em; /* 16px */
 	font-weight: 700;
 	line-height: 1.5; /* 24px */
 	width: auto;
