--- a/_css/reset.css
+++ b/_css/reset.css
@@ -40,7 +40,6 @@ body {
 	font-weight: 400;
 	font-size: 1em; /* 16px */
 	line-height: 1; /* 16px */
-	background-color: #fff;
 	text-rendering: optimizeLegibility;
 	margin: 0 auto;
 }
@@ -53,7 +52,10 @@ h1 {
 	margin: 0.25em 0 0.5em; /* 8px 0 16px */
    -webkit-font-smoothing: antialiased;
 }
-h2 {
+h2,
+article > h1,
+section > h1,
+nav > h1 {
 	color: #333;
 	font-weight: 700;
 	font-size: 1.5em; /* 24px */
@@ -61,7 +63,12 @@ h2 {
 	margin: 1.3334em 0 0.3334em; /* 32px 0 8px */
    -webkit-font-smoothing: antialiased;
 }
-h3 {
+h3,
+legend,
+article article > h1,
+article section > h1,
+section section > h1,
+section article > h1 {
 	color: #333;
 	font-weight: 400;
 	font-size: 1.3125em; /* 21px */
@@ -77,7 +84,7 @@ h4 {
 	margin: 1.3334em 0 0.4444em; /* 24px 0 8px */
    -webkit-font-smoothing: antialiased;
 }
-h5, legend {
+h5 {
 	color: #555;
 	font-weight: 700;
 	font-size: 1em; /* 16px */
