--- a/_css/reset.css
+++ b/_css/reset.css
@@ -49,7 +49,7 @@ h1 {
 	font-size: 2em; /* 32px */
 	line-height: 1; /* 32px */
 	letter-spacing: -0.03125em; /* -1px */
-	margin: 0.25em 0 0.5em; /* 8px 0 16px */
+	margin: 0.5em 0; /* 16px 0 */
    -webkit-font-smoothing: antialiased;
 }
 h2,
@@ -123,7 +123,7 @@ nav ul {
 p, pre, blockquote, ul, ol, dl, figure, figcaption, table, fieldset, details {
 	font-size: 1em; /* 16px */
 	line-height: 1.5; /* 24px */
-	margin: 0 0 1em 0; /* 0 0 16px 0 */
+	margin: 0.5em 0; /* 8px 0 */
 }
 hr {
 	font-weight: 700;
