Updated images to lorempixel.com (domain had moved)

--- a/_css/reset.css
+++ b/_css/reset.css
@@ -409,7 +409,7 @@ input[type="search"]::-webkit-search-decoration {
 }
 
 
-/* Placheolder */
+/* Placeholder */
 ::-webkit-input-placeholder {
 	color: #999;
 	}
